--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -1,7 +1,7 @@
 # Site settings
 name: Ariv Gupta
 title: Ariv Gupta
-description: Design-minded front-end software engineer focused on building beautiful interfaces and experiences
+description: A guy who just loves building things that help people live smileyer lives
 url: https://arivgupta.com/
 baseurl: ''
 email: arivgups@gmail.com
