--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "arivgupta.com",
   "version": "0.0.0",
-  "description": "Design-minded front-end software engineer focused on building beautiful interfaces and experiences",
+  "description": "A guy who just loves building things that help people live smileyer lives",
   "repository": {
     "type": "git",
     "url": "https://github.com/arivgupta/arivgupta.github.io"
