--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -6,7 +6,7 @@ url: https://arivgupta.com/
 baseurl: ''
 email: arivgups@gmail.com
 cover: https://arivgupta.github.io/img/og.png
-logo: https://arivgupta.github.io/img/emojis/technologist.png
+logo: https://arivgupta.github.io/img/emojis/smile.png
 resume: https://arivgupta.github.io/resume.pdf
 social:
   - title: email
