--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,44 +1,19 @@
-- company: Upstatement
-  url: https://www.upstatement.com/
-  time: May 2018 - Present
-  position: Engineer
+- company: Outdoors Club
+  url: https://www.outdoors-club.com/
+  time: Aug 2020 - Present
+  position: Cheif Encouraging Officer
 
-- company: Scout
-  url: https://web.northeastern.edu/scout/
-  time: Jan - June 2018
-  position: Studio Developer
+- company: students x students
+  url: https://studentsxstudents.com/
+  time: Dec 2020 - Present
+  position: Founder
 
-- company: Apple Music
-  url: https://www.apple.com/music/
-  time: July - Dec 2017
-  position: UI Engineer Co-op
+- company: SD Simplified
+  url: https://www.sdsimplified.com/
+  time: Feb 2021 - Present
+  position: Cheif Executive Officer
 
-- company: Scout
-  url: https://web.northeastern.edu/scout/
-  time: Jan - June 2017
-  position: Studio Developer
-
-- company: Starry
-  url: https://starry.com/
-  time: July - Dec 2016
-  position: Software Engineer Co-op
-
-- company: Northeastern University
-  url: http://www.ccis.northeastern.edu/
-  time: Jan - May 2016
-  position: HCI Teaching Assistant
-
-- company: NU Women in Tech
-  url: http://nuwit.ccs.neu.edu/
-  time: Jan 2016 - May 2017
-  position: President & Web Chair
-
-- company: MullenLowe U.S.
-  url: https://us.mullenlowe.com/
-  time: July - Dec 2015
-  position: Creative Technologist Co-op
-
-- company: Northeastern University
-  url: http://www.ccis.northeastern.edu/
-  time: Mar - May 2015
-  position: HCI Research Assistant
+- company: Teeny Makerspace
+  url: https://teenymakerspace.com
+  time: Jan 2019 - Present
+  position: Cheif Financial Officer
