--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -17,3 +17,8 @@
   url: https://teenymakerspace.com
   time: Jan 2019 - Present
   position: Cheif Financial Officer
+  
+- company: Public Speaking Club
+  url: https://www.mhmschool.org
+  time: Apr 2020 - Present
+  position: Founder / Coach  
