--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 name: Ariv Gupta
-title: Ariv Gupta
+title: Ariv Gupta | Incubator of Happiness
 description: A guy who just loves building things that help people live smileyer lives
 url: https://arivgupta.com/
 baseurl: ''
