--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,24 +1,19 @@
-- company: Outdoors Club
-  url: https://www.outdoors-club.com/
-  time: Aug 2020 - Present
-  position: Cheif Encouraging Officer
-
-- company: students x students
-  url: https://studentsxstudents.com/
-  time: Dec 2020 - Present
-  position: Founder
-
-- company: SD Simplified
-  url: https://www.sdsimplified.com/
-  time: Feb 2021 - Present
-  position: Cheif Executive Officer
-
-- company: Teeny Makerspace
-  url: https://teenymakerspace.com
-  time: Jan 2019 - Present
-  position: Cheif Financial Officer
+- company: Top 20 in the State in Humorous Interpretation
+  url: http://www.chssa.org
+  time: May 2021
+  position: CHSSA
   
-- company: Public Speaking Club
-  url: https://www.mhmschool.org
-  time: Apr 2020 - Present
-  position: Founder / Coach  
+- company: Superintendents Honor Roll
+  url: http://www.jameslogan.org
+  time: Aug 2018 - Present
+  position: James Logan High School 
+  
+- company: Presidental Volunteer Service Award
+  url: https://www.presidentialserviceawards.gov/
+  time: Aug 2019
+  position: Points of Light
+
+- company: Top 20 in the State in Duo Interpretation
+  url: http://www.chssa.org
+  time: May 2019
+  position: CHSSA
