--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -11,6 +11,8 @@ resume: https://arivgupta.github.io/resume.pdf
 social:
   - title: email
     url: mailto:arivgups@gmail.com
+  - title: blog
+    url: https://blog.arivgupta.com
   - title: twitter
     url: https://twitter.com/ArivGupta
   - title: instagram
