--- a/_data/other-projects.yml
+++ b/_data/other-projects.yml
@@ -4,7 +4,7 @@
   used:
     - thing: Aug 2020 - Present
 
-- name: Founder & students x students
+- name: Founder @ students x students
   url: https://studentsxstudents.com/
   description: Founded to curb the dislike currently held by many students towards writing to hopefully help them develop a positive attachment to it. A publication designed to provide a platform to uplift student voices and give them greater confidence and fulfillment in their writing. Writing is necessary everywhere, and our goal is to make it enjoyable. <br> Currently have ~200 writers, hundreds of readers, and ~10,000 weekly page views.
 
