--- a/_data/other-projects.yml
+++ b/_data/other-projects.yml
@@ -11,7 +11,7 @@
   used:
     - thing: Dec 2020 - Present
 
-- name: Cheif Executive Officer & SD Simplified
+- name: Chief Executive Officer @ SD Simplified
   url: https://www.sdsimplified.com/
   description: When we hear Speech & Debate, we think of a three word phrase. And that is being unapologetically yourself. We know how it feels to be afraid of speaking, but it should not be that way. So we built a course designed to help students navigate through the fundamentals of the best activity to get them out of their comfort zone, Speech & Debate.
   used:
