--- a/_data/other-projects.yml
+++ b/_data/other-projects.yml
@@ -17,7 +17,7 @@
   used:
     - thing: Feb 2021 - Present
 
-- name: Cheif Financial Officer & Teeny Makerspace
+- name: Cheif Financial Officer @ Teeny Makerspace
   url: https://www.teenymakerspace.com
   description: As CFO, I help forecast the economic take-in of the non-profit and how we can bring in more support in the future. I help chiefly in the design for fundraising and helps gather donations for the program. I have managed a couple individual volunteers under him at events and know how to optimize each and every person on my teams skills to the benefit of the team.
   used:
