--- a/_data/other-projects.yml
+++ b/_data/other-projects.yml
@@ -1,6 +1,6 @@
 - name: Chief Encouraging Officer @ Outdoors Club
   url: https://www.outdoors-club.com/
-  description: The Outdoors Club is driven to help improve the lives of high schoolers through the creation of a community that motivates them to take a break from their lives, get outside, and connect with nature. We meet bi-weekly to discuss our experiences and put forth personal goals detailing how many hours we want to attempt to get outside in the next two weeks. We have chapters in schools in the Bay Area and are open to starting in any other High School. Check out the website for more information!
+  description: The Outdoors Club is driven to help improve the lives of high schoolers through the creation of a community that motivates them to take a break from their lives, get outside, and connect with nature. We meet bi-weekly to discuss our experiences and put forth personal goals detailing how many hours we want to attempt to get outside in the next two weeks. We have chapters in schools in the Bay Area and are open to starting in any other High School. <b> Check out the website above for more information!
   used:
     - thing: Aug 2020 - Present
 
