--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -4,7 +4,7 @@ languages:
   - item: Emotional Intelligence
   - item: Project Management
   - item: Public Speaking
-  - item: Organisation
+  - item: Organization
 
 frameworks:
   - item: Social Media Marketing
