--- a/_data/other-projects.yml
+++ b/_data/other-projects.yml
@@ -1,12 +1,12 @@
 - name: Chief Encouraging Officer @ Outdoors Club
   url: https://www.outdoors-club.com/
-  description: The Outdoors Club is driven to help improve the lives of high schoolers through the creation of a community that motivates them to take a break from their lives, get outside, and connect with nature. We meet bi-weekly to discuss our experiences and put forth personal goals detailing how many hours we want to attempt to get outside in the next two weeks. We have chapters in schools in the Bay Area and are open to starting in any other High School. <b> Check out the website above for more information!
+  description: The Outdoors Club is driven to help improve the lives of high schoolers through the creation of a community that motivates them to take a break from their lives, get outside, and connect with nature. We meet bi-weekly to discuss our experiences and put forth personal goals detailing how many hours we want to attempt to get outside in the next two weeks. We have chapters in schools in the Bay Area and are open to starting in any other High School. <b> Check out the website above for more information! </b>
   used:
     - thing: Aug 2020 - Present
 
 - name: Founder @ students x students
   url: https://studentsxstudents.com/
-  description: Founded to curb the dislike currently held by many students towards writing to hopefully help them develop a positive attachment to it. A publication designed to provide a platform to uplift student voices and give them greater confidence and fulfillment in their writing. Writing is necessary everywhere, and our goal is to make it enjoyable. <br> Currently have ~200 writers, hundreds of readers, and ~10,000 weekly page views.
+  description: Founded to curb the dislike currently held by many students towards writing to hopefully help them develop a positive attachment to it. A publication designed to provide a platform to uplift student voices and give them greater confidence and fulfillment in their writing. Writing is necessary everywhere, and our goal is to make it enjoyable. <br> Currently have <b> ~200 writers </b>, <b> hundreds of readers </b>, and <b> ~10,000 weekly page views </b>.
 
   used:
     - thing: Dec 2020 - Present
