--- a/_data/other-projects.yml
+++ b/_data/other-projects.yml
@@ -31,6 +31,6 @@
 
 - name: Founder / Coach @ MHMS Public Speaking Club
   url: https://www.mhmschool.org
-  description: Founded the Public Speaking Club at my middle school with the vision to bring the gift of Public Speaking to the people who could benefit so much from it... middle schoolers! <b> Taught over 20 students and received positive feedback from them and their parents.
+  description: Founded the Public Speaking Club at my middle school with the vision to bring the gift of Public Speaking to the people who could benefit so much from it... middle schoolers! <b> Taught over 20 students and received positive feedback from them and their parents! </b>
   used:
     - thing: Apr 2020 - Present
