--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -14,7 +14,7 @@ social:
   - title: blog
     url: https://blog.arivgupta.com
   - title: unsplash
-    url: http://unsplash.com/@arivgupta
+    url: https://photos.arivgupta.com
   - title: github
     url: https://github.com/arivgupta
   - title: instagram
