--- a/_config.yml
+++ b/_config.yml
@@ -16,13 +16,13 @@ social:
   - title: unsplash
     url: https://photos.arivgupta.com
   - title: github
-    url: https://github.com/arivgupta
+    url: https://code.arivgupta.com
   - title: instagram
-    url: https://instagram.com/arivgups
+    url: https://ig.arivgupta.com
   - title: twitter
-    url: https://twitter.com/ArivGupta
+    url: https://twt.arivgupta.com
   - title: linkedin
-    url: https://www.linkedin.com/in/arivgupta
+    url: https://in.arivgupta.com
 #Google Analytics
 google_analytics: UA-184194234-1
 
