--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -13,6 +13,8 @@ social:
     url: mailto:arivgups@gmail.com
   - title: blog
     url: https://blog.arivgupta.com
+  - title: podcast
+    url: https://podcast.arivgupta.com
   - title: unsplash
     url: https://photos.arivgupta.com
   - title: github
