--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -15,11 +15,11 @@ social:
     url: https://blog.arivgupta.com
   - title: podcast
     url: https://podcast.arivgupta.com
-  - title: medium
+  - title: writing
     url: https://writing.arivgupta.com
-  - title: unsplash
+  - title: photos
     url: https://photos.arivgupta.com
-  - title: github
+  - title: code
     url: https://code.arivgupta.com
   - title: ig
     url: https://ig.arivgupta.com
