--- a/_data/other-projects.yml
+++ b/_data/other-projects.yml
@@ -13,7 +13,7 @@
 
 - name: Chief Executive Officer @ SD Simplified
   url: https://www.sdsimplified.com/
-  description: When we hear Speech & Debate, we think of a three word phrase. And that is being unapologetically yourself. We know how it feels to be afraid of speaking, but it should not be that way. So we built a course designed to help students navigate through the fundamentals of the best activity to get them out of their comfort zone, Speech & Debate.
+  description: When we hear Speech & Debate, we think of a three word phrase. And that is being unapologetically yourself. We know how it feels to be afraid of speaking, but it should not be that way. So we built a course designed to help students navigate through the fundamentals of the best activity to get them out of their comfort zone, Speech & Debate. <br> Currently have over <b> 650+ students </b> enrolled in our assortment of courses.
   used:
     - thing: Feb 2021 - Present
 
